--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -1,5 +1,77 @@
-
-.footer{
-    background-color: burlywood;
+.wrapper{
     grid-area: footer;
+}
+.line{
+    width: 405px;
+    height: 2px;
+    background-color: #061FFF;
+}
+
+.logo_container{}
+.logo{
+    padding-left: 145px;
+    width: 140px;
+    height: 105px;
+}
+.menu_wrapper{
+    display: grid;
+    grid-template-areas: "models item Item";
+    grid-template-columns: 0.5fr 0.5fr 0.5fr;
+    max-width: 950px;
+    margin: 0px auto;
+}
+
+.title{
+    font-size: 32px;
+    font-weight: 400;
+}
+
+.models{
+    grid-area: models;
+}
+
+.model{
+    text-decoration: none;
+    color: #000000;
+    font-weight: 400;
+    font-style: italic;
+    transition: font-weight 0.1s ease;
+    &:hover{
+        font-weight: 700;
+    }
+    &:not(:last-child){
+        margin-bottom: 20px;
+    }
+}
+
+.list{
+    display: flex;
+    flex-direction: column;
+}
+
+.item_container{
+    grid-area: item;
+}
+
+.itemContainer{
+    grid-area: Item;
+}
+
+.item{
+    display: flex;
+    flex-direction: column;
+}
+
+.link{
+    text-decoration: none;
+    color: #000000;
+    font-weight: 100;
+    font-style: italic;
+    transition: font-weight 0.1s ease;
+    &:hover{
+        font-weight: 400;
+    }
+    &:not(:last-child){
+        margin-bottom: 20px;
+    }
 }
