--- a/src/components/Header/HeaderInfo/HeaderInfo.module.css
+++ b/src/components/Header/HeaderInfo/HeaderInfo.module.css
@@ -3,20 +3,9 @@
     align-items: center;
 }
 
-.language{
-    display: flex;
-    margin: 0 70px 0 0;
-}
-
 .image{
     width: 30px;
     height: 30px;
-}
-
-.info{
-    margin: 0 0 0 30px;
-}
-.text {
 }
 
 .profile{
@@ -44,6 +33,7 @@
     position: absolute;
     left: 0;
     width: 0;
+    bottom: -5px;
     height: 2px;
     background-color: #000000;
     content: "";
