--- a/src/components/Header/Menu/MenuLink/MenuLink.module.css
+++ b/src/components/Header/Menu/MenuLink/MenuLink.module.css
@@ -17,6 +17,7 @@
     display: block;
     position: absolute;
     left: 0;
+    bottom: -5px;
     width: 0;
     height: 2px;
     background-color: #000000;
