--- a/src/App.css
+++ b/src/App.css
@@ -8,14 +8,10 @@
     grid-template-rows: 1fr;
     grid-template-columns:2fr 3fr ;
     max-width: 1300px;
-    margin: 0px auto;
+    margin: 0 auto;
 }
 
-
-.content{
+.main_content{
     grid-area: content;
-    display: grid;
-    grid-template-areas:"navbar imageset";
-    grid-template-rows: 1fr;
-    grid-template-columns: 1fr 1.5fr;
 }
+
