--- a/src/components/Header/Menu/Menu.module.css
+++ b/src/components/Header/Menu/Menu.module.css
@@ -1,3 +1,34 @@
 .menu{
     display: flex;
+    font-family: Helvetica, sans-serif;
+}
+.link_container{
+    margin-right: 5px;
+    width: 150px;
+    height: 38px;
+    text-align: center;
+    align-items: center;
+}
+.link{
+    position: relative;
+    color: #000000;
+    cursor: pointer;
+    line-height: 1;
+    text-decoration: none;
+    margin-bottom: 5px;
+}
+.link:after{
+    display: block;
+    position: absolute;
+    left: 0;
+    bottom: -5px;
+    width: 0;
+    height: 2px;
+    background-color: #000000;
+    content: "";
+    transition: width 0.3s ease-out;
+}
+.link:hover:after,
+.link:focus:after{
+    width: 100%;
 }
