--- a/src/components/Offers/Offers.module.css
+++ b/src/components/Offers/Offers.module.css
@@ -7,7 +7,7 @@
     &:not(:last-child){
         margin-bottom: 40px;
     }
-    border: #000000 2px solid;
+    border: #6600ff 2px solid;
     border-radius: 10px;
     padding: 15px;
 }
