--- a/src/components/Models/Models.module.css
+++ b/src/components/Models/Models.module.css
@@ -1,6 +1,7 @@
 .wrapper{
     font-family: Helvetica, sans-serif;
     padding-left: 150px;
+    margin-top: 100px;
 }
 .text{
     margin: 20px 0 20px 0;
