--- a/src/components/BodyRepair/BodyRepair.module.css
+++ b/src/components/BodyRepair/BodyRepair.module.css
@@ -1,5 +1,9 @@
+.slider{
+    margin-top: 100px;
+}
+
 .image{
-    width: 400px;
+    width: 450px;
     height: 250px;
     border-radius: 10px;
 }
@@ -10,6 +14,11 @@
 .item{
     margin-left: 15px;
 }
+
+.parts{
+    padding-left: 100px;
+}
+
 .button_container{
     margin-top: 20px;
     display: flex;
