--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -1,25 +1,31 @@
 .flex_container{
-    max-width: 1300px;
-    width: 1300px;
-    margin: 50px 60px 0 auto;
+    margin: 50px 0 0 0;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
+    grid-area: footer;
+    background-color: #2f2fa2;
+    padding: 20px 0;
+    align-items: center;
+    max-width: 100%;
+    font-size: 18px;
 }
-.social_networks{}
+
+.text{
+    color: #F5F5F5;
+}
 
 .social_link{
-    &:not(:last-child){
-        margin-right: 100px;
-    }
+    fill: #F5F5F5;
 }
 
 .link{
     position: relative;
-    color: #000000;
+    color: #F5F5F5;
     cursor: pointer;
     line-height: 1;
     text-decoration: none;
     margin-bottom: 5px;
+
 }
 .link:after{
     display: block;
@@ -28,7 +34,7 @@
     bottom: -5px;
     width: 0;
     height: 2px;
-    background-color: #000000;
+    background-color: #F5F5F5;
     content: "";
     transition: width 0.3s ease-out;
 }
