--- a/src/components/Header/Menu/Menu.module.css
+++ b/src/components/Header/Menu/Menu.module.css
@@ -11,7 +11,8 @@
 }
 .link{
     position: relative;
-    color: #000000;
+    letter-spacing: 0.1em;
+    color: #F5F5F5;
     cursor: pointer;
     line-height: 1;
     text-decoration: none;
@@ -24,7 +25,7 @@
     bottom: -5px;
     width: 0;
     height: 2px;
-    background-color: #000000;
+    background-color: #F5F5F5;
     content: "";
     transition: width 0.3s ease-out;
 }
